add fieldsets to ability table

--- a/main.html
+++ b/main.html
@@ -124,24 +124,24 @@
 			<tr>
 			<td> </td><td>Strength</td><td>Dexterity</td><td>Constitution</td><td>Intelligence</td><td>Wisdom</td><td>Charisma</td>
 			</tr>
-			<tr><div class="abilityRow">
-				<td class="absum" id="absum_1"> </td><td><input type="radio" name="absum_1_choice" value="Strength" checked></td><td><input type="radio" name="absum_1_choice" value="Dexterity"> </td><td><input type="radio" name="absum_1_choice" value="Constitiution"> </td><td> <input type="radio" name="absum_1_choice" value="Intelligence"></td><td><input type="radio" name="absum_1_choice" value="Wisdom"> </td><td><input type="radio" name="absum_1_choice" value="Charisma"> </td>
-			</div></tr>
-			<tr><div class="abilityRow">
-				<td class="absum" id="absum_2"> </td><td><input type="radio" name="absum_2_choice" value="Strength" checked></td><td><input type="radio" name="absum_2_choice" value="Dexterity"> </td><td><input type="radio" name="absum_2_choice" value="Constitiution"> </td><td> <input type="radio" name="absum_2_choice" value="Intelligence"> </td><td><input type="radio" name="absum_2_choice" value="Wisdom"> </td><td><input type="radio" name="absum_2_choice" value="Charisma"> </td>
-			</div></tr>
-			<tr><div class="abilityRow">
-				<td class="absum" id="absum_3"> </td> <td> <input type="radio" name="absum_3_choice" value="Strength" checked></td><td><input type="radio" name="absum_3_choice" value="Dexterity"> </td><td><input type="radio" name="absum_3_choice" value="Constitiution"> </td><td> <input type="radio" name="absum_3_choice" value="Intelligence"></td><td><input type="radio" name="absum_3_choice" value="Wisdom"> </td><td><input type="radio" name="absum_3_choice" value="Charisma"> </td>
-			</div></tr>
-			<tr><div class="abilityRow">
-				<td class="absum" id="absum_4"> </td> <td> <input type="radio" name="absum_4_choice" value="Strength" checked></td><td><input type="radio" name="absum_4_choice" value="Dexterity"> </td><td><input type="radio" name="absum_4_choice" value="Constitiution"> </td><td> <input type="radio" name="absum_4_choice" value="Intelligence"></td><td><input type="radio" name="absum_4_choice" value="Wisdom"> </td><td><input type="radio" name="absum_4_choice" value="Charisma"> </td>
-			</div></tr>
-			<tr><div class="abilityRow">
+			<tr><div class="abilityRow"><fieldset id="scoreChoice1">
+				<td class="absum" id="absum_1"> </td><td><input type="radio" name="absum_choice_1" value="Strength" checked></td><td><input type="radio" name="absum_choice_1" value="Dexterity"> </td><td><input type="radio" name="absum_choice_1" value="Constitiution"> </td><td> <input type="radio" name="absum_choice_1" value="Intelligence"></td><td><input type="radio" name="absum_choice_1" value="Wisdom"> </td><td><input type="radio" name="absum_choice_1" value="Charisma"> </td>
+			</fieldset></div></tr>
+			<tr><div class="abilityRow"><fieldset id="scoreChoice2">
+				<td class="absum" id="absum_2"> </td><td><input type="radio" name="absum_choice_2" value="Strength" checked></td><td><input type="radio" name="absum_choice_2" value="Dexterity"> </td><td><input type="radio" name="absum_choice_2" value="Constitiution"> </td><td> <input type="radio" name="absum_choice_2" value="Intelligence"> </td><td><input type="radio" name="absum_choice_2" value="Wisdom"> </td><td><input type="radio" name="absum_choice_2" value="Charisma"> </td>
+			</fieldset></div></tr>
+			<tr><div class="abilityRow"><fieldset id="scoreChoice3">
+				<td class="absum" id="absum_3"> </td> <td> <input type="radio" name="absum_choice_3" value="Strength" checked></td><td><input type="radio" name="absum_choice_3" value="Dexterity"> </td><td><input type="radio" name="absum_choice_3" value="Constitiution"> </td><td> <input type="radio" name="absum_choice_3" value="Intelligence"></td><td><input type="radio" name="absum_choice_3" value="Wisdom"> </td><td><input type="radio" name="absum_choice_3" value="Charisma"> </td>
+			</fieldset></div></tr>
+			<tr><div class="abilityRow"><fieldset id="scoreChoice4">
+				<td class="absum" id="absum_4"> </td> <td> <input type="radio" name="absum_choice_4" value="Strength" checked></td><td><input type="radio" name="absum_choice_4" value="Dexterity"> </td><td><input type="radio" name="absum_choice_4" value="Constitiution"> </td><td> <input type="radio" name="absum_choice_4" value="Intelligence"></td><td><input type="radio" name="absum_choice_4" value="Wisdom"> </td><td><input type="radio" name="absum_4_choice" value="Charisma"> </td>
+			</fieldset></div></tr>
+			<tr><div class="abilityRow"><fieldset id="scoreChoice5">
 				<td class="absum" id="absum_5"> </td> <td><input type="radio" name="absum_5_choice" value="Strength" checked></td><td><input type="radio" name="absum_5_choice" value="Dexterity"> </td><td><input type="radio" name="absum_5_choice" value="Constitiution"></td><td> <input type="radio" name="absum_5_choice" value="Intelligence"></td><td><input type="radio" name="absum_5_choice" value="Wisdom"> </td><td><input type="radio" name="absum_5_choice" value="Charisma"> </td>
-			</div></tr>
-			<tr><div class="abilityRow">
+			</fieldset></div></tr>
+			<tr><div class="abilityRow"><fieldset id="scoreChoice6">
 				<td class="absum" id="absum_6"> </td> <td> <input type="radio" name="absum_6_choice" value="Strength" checked></td><td><input type="radio" name="absum_6_choice" value="Dexterity"> </td><td> <input type="radio" name="absum_6_choice" value="Constitiution"></td><td> <input type="radio" name="absum_6_choice" value="Intelligence"></td><td><input type="radio" name="absum_6_choice" value="Wisdom"> </td><td> <input type="radio" name="absum_6_choice" value="Charisma"></td>
-			</div></tr>
+			</fieldset></div></tr>
 				</tbody>
 				</table>
                 <input type="button" onclick="chooseAbilities()" value="Enter">
