--- a/main.html
+++ b/main.html
@@ -120,7 +120,7 @@
                         <td class="absum" id="absum_1"></td>
                         <td><input type="radio" name="absum_choice_1" value="Strength" checked></td>
                         <td><input type="radio" name="absum_choice_1" value="Dexterity"></td>
-                        <td><input type="radio" name="absum_choice_1" value="Constitiution"></td>
+                        <td><input type="radio" name="absum_choice_1" value="Constitution"></td>
                         <td><input type="radio" name="absum_choice_1" value="Intelligence"></td>
                         <td><input type="radio" name="absum_choice_1" value="Wisdom"></td>
                         <td><input type="radio" name="absum_choice_1" value="Charisma"></td>
@@ -133,7 +133,7 @@
                         <td class="absum" id="absum_2"></td>
                         <td><input type="radio" name="absum_choice_2" value="Strength" checked></td>
                         <td><input type="radio" name="absum_choice_2" value="Dexterity"></td>
-                        <td><input type="radio" name="absum_choice_2" value="Constitiution"></td>
+                        <td><input type="radio" name="absum_choice_2" value="Constitution"></td>
                         <td><input type="radio" name="absum_choice_2" value="Intelligence"></td>
                         <td><input type="radio" name="absum_choice_2" value="Wisdom"></td>
                         <td><input type="radio" name="absum_choice_2" value="Charisma"></td>
@@ -146,7 +146,7 @@
                         <td class="absum" id="absum_3"></td>
                         <td><input type="radio" name="absum_choice_3" value="Strength" checked></td>
                         <td><input type="radio" name="absum_choice_3" value="Dexterity"></td>
-                        <td><input type="radio" name="absum_choice_3" value="Constitiution"></td>
+                        <td><input type="radio" name="absum_choice_3" value="Constitution"></td>
                         <td><input type="radio" name="absum_choice_3" value="Intelligence"></td>
                         <td><input type="radio" name="absum_choice_3" value="Wisdom"></td>
                         <td><input type="radio" name="absum_choice_3" value="Charisma"></td>
@@ -159,7 +159,7 @@
                         <td class="absum" id="absum_4"></td>
                         <td><input type="radio" name="absum_choice_4" value="Strength" checked></td>
                         <td><input type="radio" name="absum_choice_4" value="Dexterity"></td>
-                        <td><input type="radio" name="absum_choice_4" value="Constitiution"></td>
+                        <td><input type="radio" name="absum_choice_4" value="Constitution"></td>
                         <td><input type="radio" name="absum_choice_4" value="Intelligence"></td>
                         <td><input type="radio" name="absum_choice_4" value="Wisdom"></td>
                         <td><input type="radio" name="absum_choice_4" value="Charisma"></td>
@@ -172,7 +172,7 @@
                         <td class="absum" id="absum_5"></td>
                         <td><input type="radio" name="absum_choice_5" value="Strength" checked></td>
                         <td><input type="radio" name="absum_choice_5" value="Dexterity"></td>
-                        <td><input type="radio" name="absum_choice_5" value="Constitiution"></td>
+                        <td><input type="radio" name="absum_choice_5" value="Constitution"></td>
                         <td><input type="radio" name="absum_choice_5" value="Intelligence"></td>
                         <td><input type="radio" name="absum_choice_5" value="Wisdom"></td>
                         <td><input type="radio" name="absum_choice_5" value="Charisma"></td>
@@ -185,7 +185,7 @@
                         <td class="absum" id="absum_6"></td>
                         <td><input type="radio" name="absum_choice_6" value="Strength" checked></td>
                         <td><input type="radio" name="absum_choice_6" value="Dexterity"></td>
-                        <td><input type="radio" name="absum_choice_6" value="Constitiution"></td>
+                        <td><input type="radio" name="absum_choice_6" value="Constitution"></td>
                         <td><input type="radio" name="absum_choice_6" value="Intelligence"></td>
                         <td><input type="radio" name="absum_choice_6" value="Wisdom"></td>
                         <td><input type="radio" name="absum_choice_6" value="Charisma"></td>
@@ -218,7 +218,7 @@
     <ul>
       <li>Race: <span id="raceSpan"> </span></li>
       <li>Class: <span id="classSpan"> </span></li>
-      <li>Abilities: <span id="abilitiesSpan"> </span></li>
+      <li>Abilities: 	<span id="abilitiesSpan"> </span></li>
       <li>Weapons</li>
       <li>Skills</li>
     </ul>
